add e2e tests for dispatchables endpoint update docs
