# src/types/requests.ts
@@ -59,9 +59,9 @@ export interface IParaIdParam extends ParamsDictionary {
 export interface IRangeQueryParam extends Query {
 	range: string;
 }
-export interface IPalletsCallsParam extends ParamsDictionary {
+export interface IPalletsDispatchablesParam extends ParamsDictionary {
 	palletId: string;
-	callItemId: string;
+	dispatchableItemId: string;
 }
 
 export interface IContractQueryParam extends Query {
